--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     dependencies {
         classpath group: "com.liferay", name: "com.liferay.gradle.plugins.db.support", version: "1.0.9"
+        classpath group: "com.liferay", name: "com.liferay.gradle.plugins.rest.builder", version: "1.0.21"
     }
 
     repositories {
@@ -12,3 +13,4 @@ buildscript {
 }
 
 apply plugin: "com.liferay.portal.tools.db.support"
+apply plugin: "com.liferay.portal.tools.rest.builder"
