--- a/modules/contact-rest/contact-rest-impl/build.gradle
+++ b/modules/contact-rest/contact-rest-impl/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    dependencies {
+        classpath group: "com.liferay", name: "com.liferay.gradle.plugins.rest.builder", version: "1.0.21"
+    }
+
+    repositories {
+        maven {
+            url "https://repository-cdn.liferay.com/nexus/content/groups/public"
+        }
+    }
+}
+
+apply plugin: "com.liferay.portal.tools.rest.builder"
+
 dependencies {
 	api project(":modules:contact-rest:contact-rest-api")
 
